# recipe-book-backend

./: .coveragerc  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  poetry.toml  pyproject.toml
.docker/: .dockerignore  docker-compose.yml  start.sh  stop.sh
recipe_book/: .env.example  __init__.py  constants.py  dependencies.py  settings.py
recipe_book/application_core/auth/interfaces/: access_token.py  auth_service.py  csrf_token.py  refresh_token.py
recipe_book/application_core/auth/services/: auth_service.py
recipe_book/application_core/bounded_contexts/users/: constants.py
recipe_book/application_core/products/beans/: add_product_command.py  product_data.py
recipe_book/application_core/products/converters/: products_service_converter.py
recipe_book/application_core/products/interfaces/: add_product_command.py  change_product_command.py  product_data.py  product_entity.py  product_query.py  product_record.py  products_query.py  products_repository.py  products_service.py  products_service_converter.py  remove_product_command.py
recipe_book/application_core/products/services/: products_service.py
recipe_book/application_core/recipes/beans/: cooking_step_data.py  ingredient_data.py  recipe_data.py
recipe_book/application_core/recipes/converters/: recipes_service_converter.py
recipe_book/application_core/recipes/interfaces/: add_recipe_command.py  add_recipe_command_cooking_step_data.py  add_recipe_command_ingredient_data.py  cooking_step_data.py  cooking_step_entity.py  ingredient_data.py  ingredient_entity.py  ingredient_quantity.py  ingredient_unit.py  recipe_data.py  recipe_entity.py  recipes_query.py  recipes_repository.py  recipes_service.py  recipes_service_converter.py
recipe_book/application_core/recipes/services/: recipes_service.py
recipe_book/application_core/users/: constants.py  converter.py
recipe_book/application_core/users/aggregates/: profile.py  user.py
recipe_book/application_core/users/beans/: add_user_data.py  user_data.py
recipe_book/application_core/users/converters/: users_service_converter.py
recipe_book/application_core/users/interfaces/: access_token_creator.py  add_user_command.py  profile.py  profile_entity.py  profile_result.py  remove_user_command.py  token.py  user.py  user_add_data.py  user_converter.py  user_data.py  user_entity.py  user_record.py  user_result.py  users_converter.py  users_query.py  users_repository.py  users_service.py  users_service_converter.py
recipe_book/application_core/users/services/: users.py  users_service.py
recipe_book/infrastructure/: access_token_creator.py  converter.py  engine.py  password_hasher.py  session.py
recipe_book/infrastructure/beans/: product_record.py  profile_record.py  profile_result.py  user_record.py  user_result.py
recipe_book/infrastructure/converters/: product_repository_converter.py  recipe_repository_converter.py  user_repository_converter.py  users_converter.py
recipe_book/infrastructure/database_sqlalchemy/: helpers.py
recipe_book/infrastructure/interfaces/: product_repository_converter.py  recipe_repository_converter.py  user_converter.py  user_repository_converter.py  users_converter.py
recipe_book/infrastructure/repositories/: products_repository.py  recipes_repository.py  users.py  users_bin.py  users_bin_repository.py  users_repository.py
recipe_book/infrastructure/tables/: base.py
recipe_book/presentation/: api.py  app.py  constants.py  converter.py
recipe_book/presentation/beans/: add_user_command.py  bin_command.py  new_user_response.py  new_user_response_model.py  profile_response.py  profile_response_model.py  remove_user_command.py  restore_user_command.py  token.py  user_response.py  user_response_model.py  users_query.py
recipe_book/presentation/controllers/: admin_panel.py  auth.py  bin.py  dictionaries.py  products.py  recipes.py  users.py
recipe_book/presentation/converters/: dictionary_response_converter.py  products_response_converter.py  recipes_response_converter.py  users_converter.py  users_response_converter.py  users_service.py
recipe_book/presentation/framework_fastapi/: api.py  app.py  dependencies.py  exceptions.py
recipe_book/presentation/interfaces/: new_user_response.py  new_user_response_model.py  profile_response.py  profile_response_model.py  user_converter.py  user_response.py  users_converter.py  users_list_response.py
recipe_book/shared_kernal/: password_hasher.py  token_creator.py
recipe_book/shared_kernal/interfaces/: password_hasher.py
recipe_book/tests/users/: test_add_user_command_handler.py  test_remove_user_command_handler.py  test_user_entity.py  test_users_query_handler.py
src/: dependencies.py  factories.py  settings.py
src/adapters/controllers/: users.py
src/adapters/repositories/: users.py
src/beans/dtos/: user.py
src/infrastructure/database_sqlalchemy/: engine.py  helpers.py  session.py
src/ports/: primary.py  secondary.py
src/presentation/framework_fastapi/: api.py  app.py
src/scripts/: init_db.py  start.py
src/shared_kernel/: create_env.py  dependencies.py  init_db.py  settings.py
src/user_interface/framework_fastapi/: api.py  app.py
tests/: test_some.py
(+125 files in other folders)
