[tool.poetry]
name = "recipe-book-backend"
version = "0.1.0"
description = "Recipe Book"
authors = ["Mansur Gabidullin <mansur.gabidullin@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "recipe_book" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.prod.dependencies]
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^1.10.8"}
fastapi = "^0.95.2"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
argon2-cffi = "^21.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
pre-commit = "^3.3.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-randomly = "^3.12.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
create_env = "recipe_book:create_env"
init_db = "recipe_book:init_db"
start = "recipe_book:start"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -vv -ra -q --strict-markers --no-cov-on-fail --cov-config=.coveragerc --cov-report html --cov-report term-missing --cov=recipe_book"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
pythonpath = ["recipe_book"]
testpaths = ["recipe_book/tests"]

[tool.pylint.master]
init-hook = 'import sys; sys.path.append("recipe_book")'

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
python_version = "3.11"
mypy_path = ["recipe_book"]
files = ["recipe_book"]
strict = true
ignore_missing_imports = true

[tool.black]
target-version = ['py311']
line-length = 120
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
