[tool.poetry]
name = "recipe-book-backend"
version = "0.1.0"
description = "Recipe Book"
authors = ["Mansur Gabidullin <mansur.gabidullin@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "recipe_book" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "1.0.0"
pydantic = {extras = ["email"], version = "2.5.2"}
pydantic-settings = "2.1.0"
fastapi = "0.105.0"
asyncpg = "0.29.0"
sqlalchemy = "2.0.23"
uvicorn = "0.24.0.post1"
gunicorn = "21.2.0"
argon2-cffi = "23.1.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
python-multipart = "0.0.6"

# dev. dependencies
black = "23.12.0"
pylint = "3.0.3"
mypy = "1.7.1"
pre-commit = "3.6.0"

# test. dependencies
pytest = "7.4.3"
pytest-randomly = "3.15.0"
pytest-cov = "4.1.0"
pytest-asyncio = "0.23.2"

[tool.poetry.scripts]
create_env = "recipe_book:create_env"
init_db = "recipe_book:init_db"
start = "recipe_book:start"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -vv -ra -q --strict-markers --no-cov-on-fail --cov-config=.coveragerc --cov-report html --cov-report term-missing --cov=recipe_book"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
pythonpath = ["recipe_book"]
testpaths = ["recipe_book/tests"]

[tool.pylint.master]
init-hook = 'import sys; sys.path.append("recipe_book")'

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
python_version = "3.12"
packages = ["recipe_book"]
strict = true
ignore_missing_imports = true

[tool.black]
target-version = ['py312']
line-length = 120
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
